feat: add new `/give_me_kit` command for better permission control
`/give_me_kit <kit>` is equivalent to `/kit give @s <kit>` but is usable by
non-op players by default.

In addition, the boolean permission node `ftbessentials.give_me_kit.<kit>` is
now checked if the player using the command is not an op.

In this way, regular players can be given the ability via permission nodes to
give themselves specific kits.

https://github.com/FTBTeam/FTB-Mods-Issues/issues/1274